tests/baselines/reference/esDecorators-privateFieldAccess.errors.txt
esDecorators-privateFieldAccess.ts(3,13): error TS18016: Private identifiers are not allowed outside class bodies.


==== esDecorators-privateFieldAccess.ts (1 errors) ====
    declare let dec: any;
    
    @dec(x => x.#foo) // error
                ~~~~
!!! error TS18016: Private identifiers are not allowed outside class bodies.
    class Foo {
        #foo = 3;
    
        @dec(this, (x: Foo) => x.#foo) // ok
        m() {}
    }
    